--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
     </mailingLists>
     <scm>
         <connection>scm:git:git://java.net/jacc-spec~git</connection>
-        <developerConnection>scm:git:git://java.net/jacc-spec~git</developerConnection>
+        <developerConnection>scm:git:ssh://${user.name}@git.java.net/jacc-spec~git</developerConnection>
         <url>http://java.net/projects/jacc-spec/sources/git/show</url>
     </scm>
 
