--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,11 @@
     <version>1.5-SNAPSHOT</version>
     <properties>
         <extension.name>javax.security.jacc</extension.name>
-        <spec.version>1.4</spec.version>
+        <spec.version>1.5-b01</spec.version>
         <bundle.symbolicName>javax.security.jacc</bundle.symbolicName>         
         <vendor.name>Oracle Corporation</vendor.name>
         <implementation.vendor.id>org.glassfish</implementation.vendor.id>
-        <findbugs.version>2.3.1</findbugs.version>
+        <findbugs.version>2.4.0</findbugs.version>
         <findbugs.exclude>exclude.xml</findbugs.exclude>
         <findbugs.threshold>Low</findbugs.threshold>
     </properties>
