--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,8 @@
         <vendor.name>Oracle Corporation</vendor.name>
         <implementation.vendor.id>org.glassfish</implementation.vendor.id>
         <findbugs.version>2.4.0</findbugs.version>
-        <findbugs.exclude></findbugs.exclude>
+        <findbugs.skip>false</findbugs.skip>
+        <findbugs.exclude>exclude-common.xml</findbugs.exclude>
         <findbugs.threshold>Low</findbugs.threshold>
     </properties>
     <name>Java Authorization Contract for Containers API ${spec.version}</name>
@@ -70,7 +71,7 @@
     <developers>
         <developer>
             <id>monzillo</id>
-            <name>Ronal Monzillo</name>
+            <name>Ronald Monzillo</name>
             <organization>Oracle, Inc.</organization>
             <roles>
                 <role>lead</role>
@@ -119,6 +120,7 @@
                 <directory>src/main/resources</directory>
                 <excludes>
                     <exclude>META-INF/README</exclude>
+                    <exclude>${findbugs.exclude}</exclude>
                 </excludes>
             </resource>
         </resources>        
@@ -211,22 +213,33 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <version>2.8.1</version>
+                <configuration>
+                    <groups>
+                        <group>
+                            <title>JACC API Documentation</title>
+                            <packages>
+                                javax.security.jacc
+                            </packages>
+                        </group>
+                    </groups>
+                    <bottom>
+<![CDATA[Copyright &#169; 1997-2013,
+    <a href="http://www.oracle.com">Oracle</a>
+    and/or its affiliates. All Rights Reserved.
+    Use is subject to
+    <a href="{@docRoot}/doc-files/speclicense.html" target="_top">license terms</a>.
+    <br>Comments to : users@jacc-spec.java.net
+]]>
+                    </bottom>
+                </configuration>
                 <executions>
                     <execution>
-                        <phase>javadoc</phase>
+                        <id>attach-javadocs</id>
                         <goals>
-                            <goal>javadoc</goal>
+                            <goal>jar</goal>
                         </goals>
-                        <configuration>
-                            <groups>
-                                <group>
-                                    <title>JACC API Documentation</title>
-                                    <packages>javax.security.jacc</packages>
-                                </group>
-                            </groups>
-                        </configuration>
-                    </execution>
+                     </execution>
                 </executions>
             </plugin>
             <plugin>
