Changed Organization tag.

--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,8 @@
     </developers>
 
     <organization>
-        <name>JACC Community</name>
-        <url>https://jacc-spec.java.net</url>
+        <name>Oracle Corporation</name>
+        <url>http://www.oracle.com</url>
     </organization>
     <licenses>
         <license>
